<resources>

    <string name="app_name">Filmyzilla</string>
    <string name="affirmation1">Chewbacca from Star Wars</string>
    <string name="affirmation2">Groot from Marvel</string>
    <string name="affirmation3">Yoda from Star Wars</string>
    <string name="affirmation4">R2D2 from Star Wars</string>
    <string name="affirmation5">Reepicheep from Chronicles Of Narnia</string>
    <string name="affirmation6">Dexter in Night at the Museum</string>
    <string name="affirmation7">Porgs from Star Wars</string>

    <string name="home">Home</string>
    <string name="gallery">Gallery</string>

    <string name="megha_gupta">Megha Gupta</string>
    <string name="megs_gupta">megs.gupta</string>
    <string name="android_developer">Android Developer</string>

    <string name="open">open</string>
    <string name="close">close</string>

    <string name="welcome_to_filmyzilla">Welcome to Filmyzilla</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="Filmyzilla">filmyzilla</string>
    <string name="version_4_1_40_3">Version 4.1.40.3</string>
    <string name="all_rights_are_reserved">All Rights Are Reserved</string>
    <string name="copyright_2016_2022">Copyright 2016–2022</string>
    <string name="copyright_logo">Copyright logo</string>
    <string name="login_top_bar">login top bar</string>
    <string name="google">google</string>
    <string name="facebook">facebook</string>
    <string name="instagram">instagram</string>
    <string name="mobile_number">mobile number</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="google_logo">Google Logo</string>
    <string name="instagram_logo">instagram logo</string>
    <string name="facebook_logo">facebook logo</string>
    <string name="info">Info</string>
    <string name="get_otp">GET OTP</string>
    <string name="Mobile_number">Mobile Number</string>

    <string name="otp">OTP</string>
    <string name="status_code_sent">code Sent</string>
    <string name="status_verification_failed">Status Verification Failed</string>
    <string name="status_verification_succeeded">Status Verification Succeeded</string>
    <string name="instant_validation">Instant Validation</string>
    <string name="status_sign_in_failed">Status Sign Up Failed</string>

    <string name="Resend_OTP">resend</string>
    <string name="Login">Login</string>
    <string name="email">Email</string>
    <string name="new_user">New User?</string>
    <string name="signup">SignUp</string>
    <string name="download">download</string>
    <string name="search_icon">search_icon</string>
    <string name="search">search</string>
    <string name="trending_tags">trending_tags</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="settings">Settings</string>


</resources>