<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:id="@+id/home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home"/>
    <item android:id="@+id/gallery"
        android:icon="@drawable/ic_baseline_photo_library_24"
        android:title="@string/gallery"/>
    <item android:id="@+id/info"
        android:icon="@drawable/ic_baseline_info_24"
        android:title="@string/info"/>
    <item android:id="@+id/login"
        android:icon="@drawable/ic_baseline_login_24"
        android:title="@string/login"/>
    <item android:id="@+id/settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/settings"/>

</menu>