<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pexels_photo_3945317"
    tools:context=".child_fragments.PolicyFragment">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bubblegum_sans"
        android:paddingStart="10dp"
        android:paddingEnd="20dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="250dp"
        android:text="@string/Filmyzilla"
        android:id="@+id/appName"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="42sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appName"
        android:layout_marginStart="130dp"
        android:fontFamily="@font/bubblegum_sans"
        android:text="@string/version_4_1_40_3"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="24sp"
        android:typeface="serif" />

    <TextView
        android:id="@+id/copyright"
        android:layout_width="500dp"
        android:layout_height="30dp"
        android:layout_below="@+id/version"
        android:layout_marginStart="130dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="55dp"
        android:fontFamily="@font/bubblegum_sans"
        android:text="@string/copyright_2016_2022"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20sp"
        android:typeface="serif" />

    <TextView
        android:id="@+id/Rights"
        android:layout_width="293dp"
        android:layout_height="30dp"
        android:layout_below="@+id/copyright"
        android:layout_marginStart="110dp"
        android:fontFamily="@font/bubblegum_sans"
        android:text="@string/all_rights_are_reserved"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20sp"
        android:typeface="serif" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="110dp"
        android:layout_marginTop="55dp"
        android:layout_below="@+id/version"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="40dp"
        android:contentDescription="@string/copyright_logo"
        android:src="@drawable/ic_baseline_copyright_24"
        />

</RelativeLayout>