<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profilepic"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:drawingCacheQuality="high"
        android:src="@drawable/image3">

    </de.hdodenhof.circleimageview.CircleImageView>

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profilepic"
        android:fontFamily="@font/bubblegum_sans"
        android:text="@string/megha_gupta"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#070707"
        android:textSize="18sp"
        android:typeface="serif"
        android:layout_marginStart="20dp"/>

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/bubblegum_sans"
        android:text="@string/megs_gupta"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#858282"
        android:textSize="14sp"
        android:typeface="serif"/>

    <TextView
        android:id="@+id/bio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/bubblegum_sans"
        android:text="@string/android_developer"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#353434"
        android:textSize="14sp"
        android:typeface="serif"/>

    <View
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@id/bio"
        style="@style/line">
    </View>


</RelativeLayout>