<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_constraintWidth_percent=".8"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpFragment">


    <EditText
        android:id="@+id/mobileNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:autofillHints="@string/mobile_number"
        android:background="@drawable/edit_text"
        android:hint="@string/mobile_number"
        android:inputType="phone"
        android:paddingStart="30dp"
        android:paddingTop="10dp"
        android:paddingEnd="0dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.118" />

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mobileNumber"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintHorizontal_bias="0.5"
        android:hint="@string/otp"
        android:autofillHints="OTP"
        android:paddingStart="30dp"
        android:paddingEnd="0dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:id="@+id/otp"
        android:inputType="number"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"/>


    <Button
        android:id="@+id/getOtp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_bg"
        android:fontFamily="@font/bubblegum_sans"
        android:padding="5dp"
        android:text="@string/get_otp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/otp"
        app:layout_constraintHeight_percent=".7"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@id/otp"
        app:layout_constraintTop_toBottomOf="@+id/otp"
        app:layout_constraintVertical_bias="0.1" />

    <Button
        android:id="@+id/signup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_bg"
        android:fontFamily="@font/bubblegum_sans"
        android:padding="5dp"
        android:text="@string/login"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/getOtp"
        app:layout_constraintHeight_percent=".7"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/getOtp"
        app:layout_constraintTop_toBottomOf="@+id/getOtp"
        app:layout_constraintVertical_bias="0.1"
        />

</androidx.constraintlayout.widget.ConstraintLayout>